--- a/clash-config.yaml.tmpl
+++ b/clash-config.yaml.tmpl
@@ -83,7 +83,7 @@ proxy-groups:
     type: url-test
     proxies:
       - ss3
-      - vmess
+      #- vmess
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
 
